formatting and removing bloat

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,28 +1,36 @@
-html,body {
+html,
+body {
   height: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
   color: #333333;
   background: #EEEEEE;
-  font-size: 2.4rem;
+  font-size: 1rem;
 }
 
-
-.invert-color { color: #EEEEEE; }
-.invert-bg { background: #333333; }
-.no-invert-color { color: #333333; }
-.no-invert-bg { background: #EEEEEE; }
+.invert-color {
+  color: #EEEEEE;
+}
+.invert-bg {
+  background: #333333;
+}
+.no-invert-color {
+  color: #333333;
+}
+.no-invert-bg {
+  background: #EEEEEE;
+}
 
 div.top-bar {
   background: #F73D35;
 }
 
 .top-bar-text {
-  padding-top: 125px;
+  font-size: 30px;
 }
 
 div#top-bar-sm {
-  min-height: 250px;
+  min-height: 100px;
 }
 
 div.spacing-30 {
@@ -43,14 +51,10 @@ body {
 }
 
 .gutter-padding {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
-
 
 #footer {
   bottom: 0;
   padding-bottom: 2rem;
 }
-
-
-
